<resources>
    <string name="app_name">RavelryKnit</string>

    <string name="login_title">Login</string>
    <string name="submit">Login to Ravelry</string>
    <string name="action_settings">Settings</string>

    <string name="submit_title">Submit a Project</string>
    <string name="project_name">Project Name*:</string>
    <string name="project_craft">Which Craft?</string>
    <string name="project_pattern_location">Where can people find the pattern that you used for this project?</string>
    <string name="project_pattern_name">Name of pattern*:</string>
    <string name="project_pattern_source_name">Pattern source (name of book, website, magazine)</string>
    <string name="project_picture">Add a picture of your project:</string>
    <string name="project_take_picture">Take Picture</string>
    <string name="project_notes">Notes:</string>
    <string name="project_yarn">Yarn name:</string>
    <string name="project_yarn_color">Pick the closest color:</string>
    <string name="project_yarn_weight">Yarn weight:</string>
    <string name="project_submit">Submit</string>
    <string name="fix_submit">The fields \'Project Name\' and \'Name of pattern\' cannot be blank</string>

    <string name="display_name">Project Name:</string>
    <string name="display_craft">Craft:</string>
    <string name="display_pattern_name">Pattern Name:</string>
    <string name="display_yarn">Yarn:</string>
    <string name="display_created">Created:</string>
    <string name="display_completed">Completed:</string>
    <string name="display_user">User:</string>

    <string-array name="craft_array">
        <item></item>
        <item>Crochet</item>
        <item>Knitting</item>
        <item>Loom Knitting</item>
        <item>Machine Knitting</item>
        <item>Weaving</item>
        <item>Spinning</item>
    </string-array>

    <string-array name="pattern_source_array">
        <item></item>
        <item>Book or magazine</item>
        <item>Website or download</item>
        <item>Handout, pamphlet or sheet</item>
        <item>Based on a stitch from a dictionary, etc</item>
        <item>Not available - this is a heavily modified version of a design</item>
        <item>Not available - I created this design</item>
    </string-array>
    <string name="title_activity_main">Main</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="yarn_color_array">
        <item></item>
        <item>Black</item>
        <item>Blue</item>
        <item>Blue-green</item>
        <item>Blue-purple</item>
        <item>Brown</item>
        <item>Grey</item>
        <item>Green</item>
        <item>Natural/Undyed</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Red-orange</item>
        <item>Red-purple</item>
        <item>White</item>
        <item>Yellow</item>
        <item>Yellow-green</item>
        <item>Yellow-orange</item>
    </string-array>

    <string-array name="yarn_weight_array">
        <item></item>
        <item>Thread</item>
        <item>Cobweb / 1 ply</item>
        <item>Lace / 2 ply</item>
        <item>Light Fingering / 3 ply</item>
        <item>Fingering / 4 ply (14 wpi)</item>
        <item>Sport / 5 ply (12 wpi)</item>
        <item>DK / 8 ply (11 wpi)</item>
        <item>Worsted / 10 ply (9 wpi)</item>
        <item>Aran / 10 ply (8 wpi)</item>
        <item>Bulky / 12 ply (7 wpi)</item>
        <item>Super Bulky (5-6 wpi)</item>
    </string-array>

    <string name="title_activity_display">Display</string>

</resources>
